# rust_mazes

./: .gitignore  Cargo.toml  build.sh  vercel.json
src/: cell.rs  lib.rs  main.rs  maze.rs  maze_renderer.rs  maze_svg_render.rs  random_prim.rs  svg_generator.rs
src/generator_algorithms/: ellers.rs  generator_algorithms.rs  generator_helpers.rs  mod.rs  random_prim.rs  recursive_backtracker.rs
src/solver_algorithms/: breadth_first_search.rs  depth_first_search.rs  djikstras.rs  mod.rs  solver_helpers.rs
src/structures/: cell.rs  maze.rs  maze_svg_render.rs  mod.rs
src/ui/: main_view.rs  mod.rs
src/ui/assets/: main.css
src/ui/components/: Button.rs  DimensionConfig.rs  Dropdown.rs  GeneratorConfig.rs  GeneratorConfigNew.rs  Header.rs  Maze.rs  MazeRender.rs  NumInput.rs  NumSlider.rs  SolverConfig.rs  SolverConfigNew.rs  mod.rs
