[package]
name = "maze_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.6.1"
indexmap = "2.7.0"
rand = "0.8.5"
svg = "0.18.0"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
