[package]
name = "maze_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.6.1"
indexmap = "2.7.0"
rand = "0.8.5"
svg = "0.18.0"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures = "0.4.50"
rayon = "1.10.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
